<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/txt_user"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="214dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/txt_view"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <TextView
        android:id="@+id/txt_openings"
        android:layout_width="235dp"
        android:layout_height="22dp"
        android:fontFamily="@font/lato"
        android:paddingLeft="10dp"
        android:text="@string/txt_openings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_view"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_response"
        android:layout_width="273dp"
        android:layout_height="25dp"
        android:layout_marginBottom="536dp"
        android:fontFamily="@font/lato"
        android:paddingLeft="10dp"
        android:text="@string/txt_responses"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txt_search"
        android:layout_width="288dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_response"
        app:layout_constraintVertical_bias="0.017" />

    <ImageView
        android:id="@+id/img_search"
        android:layout_width="48dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_response"
        app:layout_constraintVertical_bias="0.036" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJobs"
        android:layout_width="276dp"
        android:layout_height="294dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_search"
        app:layout_constraintVertical_bias="0.483" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>