<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="313dp"
    android:layout_height="350dp"
    android:background="@color/baby_blue"
    tools:context=".ui.popup_cv.PopupCV">


    <ImageView
        android:id="@+id/cv_close"
        android:layout_width="57dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.985"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cv_favorite"
        android:layout_width="52dp"
        android:layout_height="47dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_star_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cv_email"
        app:layout_constraintVertical_bias="0.645" />

    <ImageView
        android:id="@+id/cv_download"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toEndOf="@+id/cv_favorite" />

    <TextView
        android:id="@+id/txt_cv_name"
        android:layout_width="278dp"
        android:layout_height="32dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/txt_cv_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cv_zipandplace"
        android:layout_width="278dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="19dp"
        android:background="@color/grey"
        android:fontFamily="@font/lato"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/txt_cv_place"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cv_name" />

    <TextView
        android:id="@+id/txt_cv_phone"
        android:layout_width="278dp"
        android:layout_height="32dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:fontFamily="@font/lato"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/int_cv_mobile"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cv_zipandplace" />

    <TextView
        android:id="@+id/txt_cv_email"
        android:layout_width="278dp"
        android:layout_height="32dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:background="@color/grey"
        android:fontFamily="@font/lato"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/txt_cv_email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cv_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>